tests/fail/emptyImport.parallel
/*
error: empty import path
8  |
9  |import ""
    ^^^^^^ import statements require a path

*/

import ""